--- a/mithra/index.html
+++ b/mithra/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Course Registration</title>
+    <title>Online Course Registration </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Online Course Registration</h1>
+        <h1>Online Course </h1>
         <div class="courses">
             <h2>Available Courses</h2>
             <div id="course-list">
