--- a/mithra/index.html
+++ b/mithra/index.html
@@ -26,6 +26,10 @@
                 <select id="course-select" required>
                     <!-- Course options will be populated here -->
                 </select>
+                <label for="course">Select Course:</label>
+                <select id="course-select" required>
+                    <!-- Course options will be populated here -->
+                </select>
 
                 <button type="submit">Register</button>
             </form>
